--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <p>Skilline has got more than 100k positive ratings from our users around the world.</p>
                 <p>Some of the students and teachers were greatly helped by the Skilline.</p>
                 <p>Are you too? Please give your assessment</p>
-                <button>Write your assessment<i class="bi bi-arrow-right"></i>  </button>
+                <button><a href="./assignment1.html">submit your assessment</a><i class="bi bi-arrow-right"></i>  </button>
             </div>
             <div class="img">
                 <img src="images/testimonials.png" alt="">
