--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <ul class="nav-list">
                 <li><a href="">Home</a></li>
-                <li><a href="">Careers</a></li>
+                <li><a href="./dashboard.html">Dashboard</a></li>
                 <li><a href="">Blog</a></li>
                 <li><a href="">About Us</a></li>
                 <button class="login"><a href="./login.html">Login</a></button>
