--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
             </div>
             <ul class="nav-list">
                 <li><a href="">Home</a></li>
-                <li><a href="">Careers</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="./dashboard.html">Dashboard</a></li>
                 <li><a href="">About Us</a></li>
                 <button class="login"><a href="./login.html">Login</a></button>
                 <button class="signup"><a href="./signup.html">signup</a></button>
@@ -242,7 +241,7 @@
                 <p>Skilline has got more than 100k positive ratings from our users around the world.</p>
                 <p>Some of the students and teachers were greatly helped by the Skilline.</p>
                 <p>Are you too? Please give your assessment</p>
-                <button>Write your assessment<i class="bi bi-arrow-right"></i>  </button>
+                <button><a href="./assignment1.html"> submit your assessment</a><i class="bi bi-arrow-right"></i> </button>
             </div>
             <div class="img">
                 <img src="images/testimonials.png" alt="">
